add getResults function returns true if answer is correct

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         <div id="guessing-div" class="row form-inline">
           <input type="hidden" id="attempt"/>
           <input type="hidden" id="answer"/>
-          <input id="user-guess" class="form-control" type="number" />
+          <input id="user-guess" class="form-control" type="number" placeholder="0000" />
           <button class="btn btn-primary" onclick="guess()">Submit Guess</button>
         </div>
 
